cmake_minimum_required(VERSION 3.22)
project(c++
        VERSION 1.0
        DESCRIPTION "c++ project"
        LANGUAGES CXX
        )

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(primer)
#add_subdirectory(compile)
#add_subdirectory(unix_manual)
#add_subdirectory(qt6_dev_example)
#add_subdirectory(opengl_programing_guide)
